src/snapshots/netflow_parser__tests__it_creates_error.snap
---
source: src/lib.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- Error:
    error_message: Not Supported
    bytes:
      - 12
      - 13
      - 14

