src/snapshots/netflow_parser__tests__it_doesnt_panic_with_invalid_ipfix_template.snap
---
source: src/lib.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- Error:
    error_message: "Could not parse v10_set: Parsing requires 1 bytes/chars"
    bytes:
      - 0
      - 10
      - 0
      - 64
      - 1
      - 2
      - 3
      - 4
      - 0
      - 0
      - 0
      - 0
      - 1
      - 2
      - 3
      - 4
      - 0

