src/snapshots/netflow_parser__tests__it_parses_ipfix.snap
---
source: src/lib.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- IPFix:
    header:
      version: 10
      length: 2
      export_time: 2313
      observation_domain_id: 66051

