src/snapshots/netflow_parser__tests__it_parses_v5.snap
---
source: src/lib.rs
expression: results
---
- V5:
    header:
      version: 5
      count: 512
      sys_up_time: 50332672
      unix_secs: 83887623
      unix_nsecs: 134807553
      flow_sequence: 33752069
      engine_type: 6
      engine_id: 7
      sampling_interval: 2057
    body:
      src_addr: 0.1.2.3
      dst_addr: 4.5.6.7
      next_hop: 8.9.0.1
      input: 515
      output: 1029
      d_pkts: 101124105
      d_octets: 66051
      first: 67438087
      last: 134807553
      src_port: 515
      dst_port: 1029
      pad1: 6
      tcp_flags: 7
      protocol: EGP
      tos: 9
      src_as: 1
      dst_as: 515
      src_mask: 4
      dst_mask: 5
      pad2: 1543

