src/snapshots/netflow_parser__tests__it_parses_v9_data_cached_template.snap
---
source: src/lib.rs
expression: parser.parse_bytes(&packet)
---
- V9:
    header:
      version: 9
      count: 1
      sys_up_time: 2313
      unix_secs: 66051
      unix_time:
        secs_since_epoch: 66051
        nanos_since_epoch: 0
      sequence_number: 1
      source_id: 1
    flowsets:
      - flow_set_id: 258
        template: ~
        options_template: ~
        data:
          length: 12
          data_fields:
            - in_bytes:
                - 9
                - 2
                - 3
                - 4
              in_pkts: ~
              flows: ~
              protocol: ~
              src_tos: ~
              tcp_flags: ~
              l4_src_port: ~
              ipv4_src_addr: ~
              src_mask: ~
              input_snmp: ~
              l4_dst_port: ~
              ipv4_dst_addr: ~
              dst_mask: ~
              output_snmp: ~
              ipv4_next_hop: ~
              src_as: ~
              dst_as: ~
              bgp_ipv4_next_hop: ~
              mul_dst_pkts: ~
              mul_dst_bytes: ~
              last_switched: ~
              first_switched: ~
              out_bytes: ~
              out_pkts: ~
              min_pkt_lngth: ~
              max_pkt_lngth: ~
              ipv6_src_addr: ~
              ipv6_dst_addr: ~
              ipv6_src_mask: ~
              ipv6_dst_mask: ~
              ipv6_flow_label: ~
              icmp_type: ~
              mul_igmp_type: ~
              sampling_interval: ~
              sampling_algorithm: ~
              flow_active_timeout: ~
              flow_inactive_timeout: ~
              engine_type: ~
              engine_id: ~
              vendor_proprietary: ~
              future_use: ~
            - in_bytes: ~
              in_pkts: ~
              flows: ~
              protocol: ~
              src_tos: ~
              tcp_flags: ~
              l4_src_port: ~
              ipv4_src_addr: 9.9.9.8
              src_mask: ~
              input_snmp: ~
              l4_dst_port: ~
              ipv4_dst_addr: ~
              dst_mask: ~
              output_snmp: ~
              ipv4_next_hop: ~
              src_as: ~
              dst_as: ~
              bgp_ipv4_next_hop: ~
              mul_dst_pkts: ~
              mul_dst_bytes: ~
              last_switched: ~
              first_switched: ~
              out_bytes: ~
              out_pkts: ~
              min_pkt_lngth: ~
              max_pkt_lngth: ~
              ipv6_src_addr: ~
              ipv6_dst_addr: ~
              ipv6_src_mask: ~
              ipv6_dst_mask: ~
              ipv6_flow_label: ~
              icmp_type: ~
              mul_igmp_type: ~
              sampling_interval: ~
              sampling_algorithm: ~
              flow_active_timeout: ~
              flow_inactive_timeout: ~
              engine_type: ~
              engine_id: ~
              vendor_proprietary: ~
              future_use: ~

